--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -75,10 +75,21 @@
   cursor: pointer;
   margin: initial;
 }
-.main .result {
+.main .result1 {
   font-weight: bold;
   margin-top: 40px;
   white-space: pre-line;
+}
+
+.main .result2 {
+  font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 100px;
+  white-space: pre-line;
+  width: 550px;
+  vertical-align: middle;
+  text-align: center;
+  position: relative;
 }
 
 .main .buttonleft {
@@ -86,6 +97,8 @@
   background-size: 100% 100%;
   padding: 10px 20px; /* adjust as needed */
   border: none;
+  background-color: transparent;
+
 }
 
 .main .buttonright {
@@ -93,6 +106,42 @@
   background-size: 100% 100%;
   padding: 10px 20px; /* adjust as needed */
   border: none;
+  background-color: transparent;
+
+}
+.main .questionAndAnswer {
+  width: 300px;
+  display: inline-block;
+  border: #000000;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 25px;
+  padding: 20px;
+  margin: 0px 40px 0px 40px;
+}
+
+.main .containerLeftArrow {
+  justify-content: center;
+  display: inline-block;
+  vertical-align: middle; 
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);  
+  transform: translate(-50%, -50%);
+  top: 50%;
+}
+
+.main .containerRightArrow {
+  justify-content: center;
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);  
+  transform: translate(-50%, -50%);
+  top: 50%;
+}
+
+.main .answer {
+  margin-bottom: 0px;
 }
 
 
