--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -1,4 +1,5 @@
 
+
 .main,
 .main input {
   font-size: 16px;
@@ -99,6 +100,8 @@
   padding: 10px 20px; /* adjust as needed */
   border: none;
   background-color: transparent;
+  cursor: pointer;
+
 
 }
 .main .buttonright {
@@ -107,6 +110,8 @@
   padding: 10px 20px; /* adjust as needed */
   border: none;
   background-color: transparent;
+  cursor: pointer;
+
 }
 .main .questionAndAnswer {
   width: 300px;
@@ -117,6 +122,9 @@
   border-radius: 25px;
   padding: 20px;
   margin: 0px 40px 0px 40px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+  background-color: #d34e3c;
+  color:#fff;
 }
 
 .main .containerLeftArrow {
@@ -127,6 +135,7 @@
   -webkit-transform: translate(-50%, -50%);  
   transform: translate(-50%, -50%);
   top: 50%;
+
 }
 
 .main .containerRightArrow {
@@ -137,9 +146,18 @@
   -webkit-transform: translate(-50%, -50%);  
   transform: translate(-50%, -50%);
   top: 50%;
+
+  
 }
 
 .main .answer {
   margin-bottom: 0px;
 }
 
+.hideShowBTN{
+  padding: 20px;
+  margin: 0px 40px 0px 40px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+  background-color: #d34e3c !important;
+  color:#fff;
+}
