--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -25,6 +25,14 @@
   text-align: center;
   
 }
+
+.main .hideShow {
+  background-color: #d34e3c ;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 .main .icon {
   width: 300px;
   height: fit-content;
