--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -85,7 +85,7 @@
 .main .result2 {
   font-weight: bold;
   margin-top: 40px;
-  margin-bottom: 100px;
+  margin-bottom: 40px;
   white-space: pre-line;
   width: 550px;
   vertical-align: middle;
@@ -108,6 +108,36 @@
   border: none;
   background-color: transparent;
 }
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+  background-color: white;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.green.pressed {
+  background-color: rgb(156, 193, 156);
+  color: white;
+  box-shadow: 0px 0px 5px #888;
+}
+
+.green {
+  color: green; 
+}
+
+.red.pressed{
+  background-color: #b07f78;
+  color: white;
+  box-shadow: 0px 0px 5px #888;
+}
+
+.red {
+  color: #d34e3c;
+}
+
 .main .questionAndAnswer {
   width: 300px;
   display: inline-block;
@@ -117,7 +147,6 @@
   border-radius: 25px;
   padding: 20px;
   margin: 0px 40px 0px 40px;
-  transform: rotateY(360deg);
 }
 
 .main .containerLeftArrow {
