--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -172,3 +172,44 @@
 .main .answer {
   margin-bottom: 0px;
 }
+
+.main .flashcard {
+  position: relative;
+  background-color: #d34e3c;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+  width: 300px;
+  height: auto;
+  display: inline-block;
+  border: #000000;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 25px;
+  padding: 20px;
+  margin: 0px 40px 0px 40px;
+}
+
+.main .front, .main .back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  backface-visibility: hidden;
+  font-size: 16px;
+  line-height: 40px;
+}
+
+.main .back {
+  transform: rotateY(-180deg);
+}
+
+.main .show-back {
+  transform: rotateY(-180deg);
+}
+
+.main .flipping {
+  transform: rotateY(180deg);
+  transition: transform 0.5s;
+}
