--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -49,7 +49,7 @@ main .iconDownload {
   flex-direction: column;
   width:max-content;
 }
-.main input[type="text"] {
+.main input[type="number"] {
   padding: 12px 16px;
   border: 1px solid #d34e3c;
   border-radius: 4px;
