--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -293,3 +293,89 @@ main .iconDownload {
   transform: rotateY(180deg);
   transition: transform 0.5s;
 }
+
+
+
+
+/* CSS for the switch */
+input[type="checkbox"].switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin: 0;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  outline: none;
+  cursor: pointer;
+  background-color: #ccc;
+  border-radius: 34px;
+  box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  
+}
+
+input[type="checkbox"].switch:checked {
+  background-color: #f3e5a7fa;
+}
+
+input[type="checkbox"].switch:before {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  transition: all 0.3s ease;
+}
+
+input[type="checkbox"].switch:checked:before {
+  transform: translateX(26px);
+}
+
+/* CSS for the label */
+label.switch {
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 0;
+  line-height: 1;
+  cursor: pointer;
+  user-select: none;
+}
+
+input[type="checkbox"].switch:checked ~ div[name="numberOfQuestions"] {
+  display: none;
+}
+.hidden {
+  display: none;
+}
+.enableFeature{
+  padding: 20px;
+  margin: 0px 40px 0px 40px;
+}
+.labelForMode
+  {
+  font-size: 16px;
+  margin-bottom: 8px;
+  color: #333;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+.submitButtonSingle{
+  font-size: 16px;
+  display: inline-block;
+  vertical-align: middle;
+  margin-bottom: 8px;
+  color: #333;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-align: center;
+  background-color: #f3e5a7fa !important;
+}
