--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -1,6 +1,4 @@
-.outerouterContainer {
- 
-}
+.outerouterContainer {}
 
 .main,
 .main input {
@@ -20,12 +18,13 @@
   color: #353740;
   font-family: "Roboto", Helvetica, sans-serif;
 }
+
 .main {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  
+
 }
 
 
@@ -33,12 +32,14 @@
   width: 300px;
   height: fit-content;
 }
+
 main .iconDownload {
   width: 25px;
   height: fit-content;
   background-color: transparent;
 
 }
+
 .main h3 {
   font-size: 24px;
   line-height: 40px;
@@ -46,24 +47,27 @@ main .iconDownload {
   color: #3b3d41;
   margin: 16px 0 40px;
 }
+
 .main form {
   display: flex;
   flex-direction: column;
-  width:max-content;
+  width: max-content;
 }
+
 .main input[type="number"] {
   padding: 12px 16px;
   border: 1px solid #27ae60;
   border-radius: 4px;
   margin-bottom: 24px;
   outline-color: #2c3e50;
-  
-  
-  
+
+
+
   width: min-content;
   flex-direction: column;
   align-items: center;
 }
+
 .main textarea[type="text"] {
   padding: 20px 20px;
   border: 1px solid #27ae60;
@@ -76,10 +80,12 @@ main .iconDownload {
   resize: none;
   background-color: #297fb913
 }
+
 .main ::placeholder {
   color: #000000;
   opacity: 0.8;
 }
+
 .main input[type="submit"] {
   padding: 12px 0;
   color: #fff;
@@ -90,6 +96,7 @@ main .iconDownload {
   cursor: pointer;
   margin: initial;
 }
+
 .main .result1 {
   font-weight: bold;
   white-space: pre-line;
@@ -112,7 +119,8 @@ main .iconDownload {
 .main .buttonleft {
   background-image: url('/arrow_left.png');
   background-size: 100% 100%;
-  padding: 10px 20px; /* adjust as needed */
+  padding: 10px 20px;
+  /* adjust as needed */
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -121,7 +129,8 @@ main .iconDownload {
 .main .buttonright {
   background-image: url('/arrow_right.png');
   background-size: 100% 100%;
-  padding: 10px 20px; /* adjust as needed */
+  padding: 10px 20px;
+  /* adjust as needed */
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -144,7 +153,7 @@ main .iconDownload {
 }
 
 .main .green {
-  color: #27ae60; 
+  color: #27ae60;
   /* Add some padding to the button */
   padding: 10px 20px;
   /* Add a border */
@@ -157,15 +166,16 @@ main .iconDownload {
   transition: background-color 0.3s ease-in-out;
   border-radius: 25px;
   margin: 10px 10px 10px 10px;
-  transition: all 1.5s ease-out; /* added transition property */
+  transition: all 1.5s ease-out;
+  /* added transition property */
 
 }
 
-.main .green:hover{
+.main .green:hover {
   background-color: #27ae5f70;
 }
 
-.main .red.pressed{
+.main .red.pressed {
   background-color: #b07f78;
   color: white;
   box-shadow: 0px 0px 5px #888;
@@ -185,11 +195,13 @@ main .iconDownload {
   transition: background-color 0.3s ease-in-out;
   border-radius: 25px;
   margin: 10px 10px 10px 10px;
-  transition: all 1.5s ease-out; /* added transition property */
+  transition: all 1.5s ease-out;
+  /* added transition property */
 
 }
-.main .red:hover{
-background-color: #d34e3c7a;
+
+.main .red:hover {
+  background-color: #d34e3c7a;
 }
 
 
@@ -204,15 +216,15 @@ background-color: #d34e3c7a;
   margin: 0px 40px 0px 40px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
   background-color: #d34e3c;
-  color:#fff;
+  color: #fff;
 }
 
 .main .containerLeftArrow {
   justify-content: center;
   display: inline-block;
-  vertical-align: middle; 
+  vertical-align: middle;
   position: absolute;
-  -webkit-transform: translate(-50%, -50%);  
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   top: 50%;
 
@@ -223,11 +235,11 @@ background-color: #d34e3c7a;
   display: inline-block;
   vertical-align: middle;
   position: absolute;
-  -webkit-transform: translate(-50%, -50%);  
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   top: 50%;
 
-  
+
 }
 
 .main .answer {
@@ -236,19 +248,29 @@ background-color: #d34e3c7a;
 
 
 
-.downloadUpload{
-  margin: 0px 40px 0px 40px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
-  background-color: #ffffff;
-  color:#fff;
-  cursor: pointer;
-  width: 100px;
-  border-radius: 25px;
-  transition: background-color 0.3s ease-in-out;
-
+.download {
+ 
+float: right;
 
 }
-.downloadUpload:hover{
+
+.download,
+.upload {
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  background-color: #297fb952;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 10px 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.download:hover {
   background-color: #27ae60;
 
 
@@ -259,21 +281,10 @@ background-color: #d34e3c7a;
   display: none;
 }
 
-.uploadFileButton{
-  /* Customize the background color */
-  background-color: #27ae60;
-  /* Add some padding to the button */
-  padding: 10px 20px;
-  /* Add a border */
-  border: none;
-  /* Add some hover effect */
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-  border-radius: 25px;
-  margin: 40px 40px 40px 40px;
-
+.uploadFileButton {
 
 }
+
 .customFileInput {
   /* Style the custom file input button */
   /* Set the desired width and height for the button */
@@ -290,6 +301,7 @@ background-color: #d34e3c7a;
 
 
 }
+
 .customFileInput:hover {
   /* Change the background color on hover */
   background-color: #27ae60;
@@ -297,25 +309,31 @@ background-color: #d34e3c7a;
 
 .main .flashcard {
   position: relative;
-  background-color: #2980b9;
+  
   transform-style: preserve-3d;
   transition: transform 0.5s;
   width: 300px;
   height: fit-content;
-  justify-content: center; /* Add this line */
-  align-items: center; /* Add this line */
+  justify-content: center;
+  /* Add this line */
+  align-items: center;
+  /* Add this line */
   display: inline-block;
   border: #000000;
   border-style: solid;
   border-width: 1px;
   border-radius: 25px;
-  padding:initial;
+  padding: initial;
   margin: 0px 40px 0px 40px;
   color: white;
 
 }
 
-.main .front, .main .back {
+.front{
+  background-color: #297fb952;
+}
+.main .front,
+.main .back {
   top: 0;
   left: 0;
   right: 0;
@@ -329,7 +347,7 @@ background-color: #d34e3c7a;
 
 .main .back {
   transform: rotateY(-180deg);
-  background-color: #2c3e50 ;
+  background-color: #2c3e50;
   border-radius: 25px;
 
 }
@@ -360,8 +378,8 @@ input[type="checkbox"].switch {
   cursor: pointer;
   background-color: #ccc;
   border-radius: 34px;
-  box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-  
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+
 }
 
 input[type="checkbox"].switch:checked {
@@ -377,7 +395,7 @@ input[type="checkbox"].switch:before {
   height: 30px;
   background-color: #fff;
   border-radius: 30px;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   transition: all 0.3s ease;
 }
 
@@ -395,18 +413,20 @@ label.switch {
   user-select: none;
 }
 
-input[type="checkbox"].switch:checked ~ div[name="numberOfQuestions"] {
+input[type="checkbox"].switch:checked~div[name="numberOfQuestions"] {
   display: none;
 }
+
 .hidden {
   display: none;
 }
-.enableFeature{
+
+.enableFeature {
   padding: 20px;
   margin: 0px 40px 0px 40px;
 }
-.labelForMode
-  {
+
+.labelForMode {
   font-size: 16px;
   margin-bottom: 8px;
   color: #333;
@@ -416,7 +436,7 @@ input[type="checkbox"].switch:checked ~ div[name="numberOfQuestions"] {
   text-align: center;
 }
 
-.submitButtonSingle{
+.submitButtonSingle {
   font-size: 16px;
   display: inline-block;
   vertical-align: middle;
@@ -426,4 +446,58 @@ input[type="checkbox"].switch:checked ~ div[name="numberOfQuestions"] {
   text-transform: uppercase;
   letter-spacing: 1px;
   text-align: center;
+}
+
+
+.downloadInfo {
+  padding: 100px 0px 0px 0px;
+}
+
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu a {
+  text-decoration: none;
+  color: #333;
+  font-size: 18px;
+  margin-right: 20px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+}
+
+.menu a:hover {
+  background-color: #ddd;
+}
+
+.menu a.active {
+  background-color: #4CAF50;
+  color: #fff;
+}
+
+
+.main .containerFlashcard {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  height: 40vh;
+  margin: 20px;
+}
+
+
+
+.uploadAndDownload {
+  
+width: 100%;
+
 }
