--- a/openai-quickstart-node-master/pages/index.module.css
+++ b/openai-quickstart-node-master/pages/index.module.css
@@ -312,7 +312,7 @@ float: right;
   
   transform-style: preserve-3d;
   transition: transform 0.5s;
-  width: initial;
+  width:500px;
   height: fit-content;
   justify-content: center;
   /* Add this line */
